crates/oxc_css_parser/tests/error/scss/at-rule/forward/with-no-arguments.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `(`, but found `;`
  ┌─ with-no-arguments.scss:1:22
  │
1 │ @forward "other" with;
  │                      ^


